<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrainSearch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="city_from">City From</string>
    <string name="city_to">City To</string>
    <string name="train_type">Train Type</string>
    <string name="date_from">Date From</string>
    <string name="date_to">Date To</string>
    <string name="date">Date</string>
    <string name="bogies">Bogies</string>
    <string name="search">Search</string>

</resources>
